--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,4 +1,7 @@
+version: '3.8'
+
 services:
+  # --- MySQL ---
   mysql:
     image: mysql:8.0
     container_name: logpulse-mysql
@@ -16,6 +19,7 @@ services:
       - logpulse-net
     command: --default-authentication-plugin=mysql_native_password
 
+  # --- Redis ---
   redis:
     image: redis:7-alpine
     container_name: logpulse-redis
@@ -27,6 +31,34 @@ services:
     networks:
       - logpulse-net
     command: redis-server --appendonly yes
+
+  # --- Zookeeper ---
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: logpulse-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - logpulse-net
+
+  # --- Kafka ---
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: logpulse-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - logpulse-net
 
 volumes:
   mysql_data:
