--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,7 +1,38 @@
 version: '3.8'
 
 services:
-  # --- MySQL ---
+  # --- 1. Go Application (LogPulse) ---
+  app:
+    image: logpulse:v1
+    container_name: logpulse-app
+    restart: always
+    build: .
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+      - kafka
+      - redis
+    environment:
+      SERVER_PORT: 8080
+
+      # MySQL Config
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_NAME: logpulse_db
+
+      # Redis Config
+      REDIS_ADDR: redis:6379
+
+      # Kafka Config
+      KAFKA_BROKERS: kafka:29092
+      KAFKA_TOPIC: logs_topic
+    networks:
+      - logpulse-net
+
+  # --- 2. MySQL ---
   mysql:
     image: mysql:8.0
     container_name: logpulse-mysql
@@ -19,7 +50,7 @@ services:
       - logpulse-net
     command: --default-authentication-plugin=mysql_native_password
 
-  # --- Redis ---
+  # --- 3. Redis ---
   redis:
     image: redis:7-alpine
     container_name: logpulse-redis
@@ -32,7 +63,7 @@ services:
       - logpulse-net
     command: redis-server --appendonly yes
 
-  # --- Zookeeper ---
+  # --- 4. Zookeeper ---
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.0
     container_name: logpulse-zookeeper
@@ -42,7 +73,7 @@ services:
     networks:
       - logpulse-net
 
-  # --- Kafka ---
+  # --- 5. Kafka ---
   kafka:
     image: confluentinc/cp-kafka:7.4.0
     container_name: logpulse-kafka
