--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -6,13 +6,16 @@ services:
     image: logpulse:v1
     container_name: logpulse-app
     restart: always
-    build: .
+    build:
+      context: ..
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     depends_on:
       - mysql
       - kafka
       - redis
+      - elasticsearch
     environment:
       SERVER_PORT: 8080
 
@@ -29,6 +32,10 @@ services:
       # Kafka Config
       KAFKA_BROKERS: kafka:29092
       KAFKA_TOPIC: logs_topic
+
+      # Elasticsearch Config
+      ELASTICSEARCH_ADDRESS: http://elasticsearch:9200
+
     networks:
       - logpulse-net
 
@@ -91,9 +98,38 @@ services:
     networks:
       - logpulse-net
 
+  # --- 6. Elasticsearch (Search Engine) ---
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
+    container_name: logpulse-es
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false # Disable security for local dev simplicity
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" # Critical: Limit Heap Size to 512MB
+    ports:
+      - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+    networks:
+      - logpulse-net
+
+  # --- 7. Kibana (Visualization UI) ---
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.11.1
+    container_name: logpulse-kibana
+    depends_on:
+      - elasticsearch
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    networks:
+      - logpulse-net
+
 volumes:
   mysql_data:
   redis_data:
+  es_data:
 
 
 networks:
