ci: fix wrong path of dockerfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./deployments/Dockerfile # dockerfile path
+          file: ./Dockerfile # dockerfile path
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/logpulse:latest
