feat: Implement a complete asynchronous logging pipeline with Docker Compose, Kafka, Elasticsearch, and a new API.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,18 +3,18 @@ run:
 
 linters:
   enable:
-    - errcheck    # 確保你沒有忽略 error
-    - gosimple    # 檢查是否有更簡單的寫法
-    - govet       # Go 官方檢查工具
-    - ineffassign # 檢查無效的賦值
-    - staticcheck # 靜態分析
+    - errcheck    
+    - gosimple    
+    - govet       
+    - ineffassign 
+    - staticcheck 
     - typecheck
-    - unused      # 檢查沒用到的變數/常數
-    - gocyclo     # 檢查函式是否太複雜 (太多 if/else)
+    - unused      
+    - gocyclo     
 
 linters-settings:
   gocyclo:
-    min-complexity: 15 # 函式複雜度超過 15 就報錯
+    min-complexity: 15
 
 issues:
   exclude-use-default: false
