--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       context: ..
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "${APP_PORT:-8080}:8080"
     depends_on:
       - mysql
       - kafka
@@ -50,7 +50,7 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
-      - "3306:3306"
+      - "${DB_PORT:-3306}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
@@ -63,7 +63,7 @@ services:
     container_name: logpulse-redis
     restart: always
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     networks:
@@ -87,7 +87,7 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "${KAFKA_PORT:-9092}:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -107,7 +107,7 @@ services:
       - xpack.security.enabled=false # Disable security for local dev simplicity
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m" # Critical: Limit Heap Size to 512MB
     ports:
-      - "9200:9200"
+      - "${ES_PORT:-9200}:9200"
     volumes:
       - es_data:/usr/share/elasticsearch/data
     networks:
@@ -120,7 +120,7 @@ services:
     depends_on:
       - elasticsearch
     ports:
-      - "5601:5601"
+      - "${KIBANA_PORT:-5601}:5601" # Default to 5601, can be overridden
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     networks:
