feat: Implement distributed deployment with Nginx load balancing, multi-replica Go services, new log service, Redis repository, and load testing tools.

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ KAFKA_PORT=9092
 KAFKA_INTERNAL_PORT=29092
 ZOOKEEPER_PORT=2181
 
-# --- Search Stack (最常衝突的在這裡) ---
-# 如果 Windows Port 被佔用，請修改這裡，例如改成 5602
+# --- Search Stack (most common collision here) ---
+# If Windows Port is occupied, please modify here, for example, change to 5602
 ES_PORT=9200
 KIBANA_PORT=5601
 
