feat: add k6 stress test file & report

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # --- Database ---
 DB_PORT=3306
+MYSQL_ROOT_PASSWORD=your_secure_root_password
+MYSQL_DATABASE=logpulse_db
+MYSQL_USER=your_db_user
+MYSQL_PASSWORD=your_secure_password
 
 # --- Infrastructure ---
 REDIS_PORT=6379
