--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,18 @@
 name: CD Pipeline
 
 on:
-  push:
-    branches: [ "master" ] # only push to master branch
+  workflow_run:
+    workflows: ["CI Pipeline"]
+    types:
+      - completed
+    branches: ["master"]
 
 jobs:
   push_to_registry:
     name: Push Docker Image
     runs-on: ubuntu-latest
-    # ensure CI passed before execution
+    # Only run if CI workflow succeeded
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
