feat: improve cache mount build speed & ratelimit test success

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,27 @@
-# --- Database ---
+# --- Database (MySQL) ---
+DB_HOST=mysql
 DB_PORT=3306
-MYSQL_ROOT_PASSWORD=your_secure_root_password
-MYSQL_DATABASE=logpulse_db
-MYSQL_USER=your_db_user
-MYSQL_PASSWORD=your_secure_password
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=logpulse_db
 
 # --- Infrastructure ---
-REDIS_PORT=6379
-KAFKA_PORT=9092
-KAFKA_INTERNAL_PORT=29092
-ZOOKEEPER_PORT=2181
-
-# --- Search Stack (most common collision here) ---
-# If Windows Port is occupied, please modify here, for example, change to 5602
-ES_PORT=9200
-KIBANA_PORT=5601
+REDIS_ADDR=redis:6379
+KAFKA_BROKERS=kafka:29092
+KAFKA_TOPIC=logs_topic
+ELASTICSEARCH_ADDRESS=http://elasticsearch:9200
 
 # --- Application ---
-APP_PORT=8080
+SERVER_PORT=8080
+
+# --- Rate Limiting (Token Bucket) ---
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_CAPACITY=100    # Max burst requests (bucket capacity)
+RATE_LIMIT_RATE=50         # Tokens per second refill rate
+
+# --- Docker Compose Specific (Ports for Host) ---
+MYSQL_PORT=3306
+REDIS_PORT=6379
+KAFKA_PORT=9092
+ES_PORT=9200
+KIBANA_PORT=5601
