--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       # Elasticsearch Config
       ELASTICSEARCH_ADDRESS: http://elasticsearch:9200
 
+      # Rate Limiting Config
+      RATE_LIMIT_ENABLED: ${RATE_LIMIT_ENABLED:-true}
+      RATE_LIMIT_CAPACITY: ${RATE_LIMIT_CAPACITY:-100}
+      RATE_LIMIT_RATE: ${RATE_LIMIT_RATE:-50}
+
     networks:
       - logpulse-net
 
@@ -77,6 +82,9 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_log:/var/lib/zookeeper/log
     networks:
       - logpulse-net
 
@@ -85,12 +93,14 @@ services:
     image: confluentinc/cp-kafka:7.4.0
     container_name: logpulse-kafka
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_started
     ports:
       - "${KAFKA_PORT:-9092}:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -107,7 +117,7 @@ services:
     container_name: logpulse-es
     environment:
       - discovery.type=single-node
-      # ⚠️ WARNING: Security is DISABLED for local development only!
+      # WARNING: Security is DISABLED for local development only!
       # In production, you MUST enable xpack.security and configure authentication.
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m" # Critical: Limit Heap Size to 512MB
